--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ngAuth",
   "version": "0.0.0",
   "devDependencies": {
+    "gulp": "^3.8.5",
+    "gulp-ngmin": "^0.3.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-uglify": "^0.3.1",
     "karma": "~0.10"
   },
   "scripts": {
