--- a/examples/client/bower.json
+++ b/examples/client/bower.json
@@ -1,11 +1,9 @@
 {
-  "name": "ngAuth",
-  "version": "0.0.0",
-  "homepage": "https://github.com/sahat/ngAuth",
-  "license": "MIT",
+  "name": "ngAuthDemo",
+  "version": "0.0.1",
   "dependencies": {
-    "angular": "1.3",
-    "angular-messages": "~1.3.0-build.2898+sha.36831ec",
+    "angular": "1.3.0-beta.14",
+    "angular-messages": "*",
     "angular-mocks": "~1.2.19",
     "angular-route": "~1.2.19",
     "angular-strap": "~2.0.3",
