--- a/examples/server/node/package.json
+++ b/examples/server/node/package.json
@@ -4,8 +4,8 @@
   "description": "Node.js example for ngAuth",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.4.3",
     "bcryptjs": "^0.7.12",
+    "body-parser": "^1.4.3",
     "connect-redis": "^2.0.0",
     "cookie-parser": "^1.3.2",
     "express": "^4.4.5",
@@ -14,7 +14,8 @@
     "method-override": "^1.0.2",
     "moment": "^2.7.0",
     "mongoose": "^3.8.12",
-    "morgan": "^1.1.1"
+    "morgan": "^1.1.1",
+    "request": "^2.37.0"
   },
   "devDependencies": {},
   "scripts": {
