--- a/demo/server/node.js/package.json
+++ b/demo/server/node.js/package.json
@@ -19,7 +19,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,9 @@
   "bugs": {
     "url": "https://github.com/sahat/ngAuth/issues"
   },
-  "homepage": "https://sahat.github.com/ngAuth"
+  "homepage": "https://sahat.github.com/ngAuth",
+  "subdomain": "ngauth",
+  "engines": {
+    "node": "0.10.x"
+  }
 }
