--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "gulp-ngmin": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-uglify": "^0.3.1",
-    "karma": "~0.10"
+    "karma": "~0.10",
+    "karma-coverage": "^0.2.5"
   },
   "scripts": {
     "test": "karma start test/karma.conf.js"
