--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngAuth",
+  "name": "satellizer",
   "version": "0.0.0",
   "homepage": "https://github.com/sahat/ngAuth",
   "license": "MIT"
