general file tidying up

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: node_js
 node_js:
   - "0.10"
 
+before_script:
+  - npm install -g bower
+  - bower install angular angular-mocks
+
 after_script:
   - cat lcov.info | codeclimate
 
