--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "satellizer",
   "version": "0.0.0",
-  "homepage": "https://github.com/sahat/ngAuth",
+  "homepage": "https://github.com/sahat/satellizer",
   "license": "MIT"
 }
