install npm dependencies before_script and use karma directly from script in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ language: node_js
 node_js:
   - "0.10"
 
+script:
+  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --browsers PhantomJS
+
 before_script:
-  - npm install -g bower karma
+  - npm install -g bower
   - npm install
   - bower install angular angular-mocks
 
