--- a/demo/server/node.js/package.json
+++ b/demo/server/node.js/package.json
@@ -1,39 +1,19 @@
 {
-  "name": "ngAuth",
-  "version": "0.0.0",
-  "description": "Node.js example for ngAuth",
-  "main": "app.js",
+  "name": "satellizer",
+  "main": "server.js",
   "dependencies": {
     "bcryptjs": "^0.7.12",
-    "body-parser": "^1.4.3",
-    "connect-redis": "^2.0.0",
-    "cookie-parser": "^1.3.2",
-    "express": "^4.4.5",
+    "body-parser": "^1.6.2",
+    "express": "^4.8.2",
     "jwt-simple": "^0.2.0",
     "lodash": "^2.4.1",
-    "method-override": "^1.0.2",
-    "moment": "^2.7.0",
-    "mongoose": "^3.8.12",
-    "morgan": "^1.1.1",
-    "request": "^2.37.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "moment": "^2.8.1",
+    "mongoose": "^3.8.14",
+    "morgan": "^1.2.2",
+    "request": "^2.40.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sahat/ngAuth"
+    "url": "https://github.com/sahat/satellizer.git"
   },
-  "author": "Sahat Yalkabov",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sahat/ngAuth/issues"
-  },
-  "homepage": "https://sahat.github.com/ngAuth",
-  "subdomain": "ngauth",
-  "engines": {
-    "node": "0.10.x"
-  }
 }
