--- a/bower.json
+++ b/bower.json
@@ -2,5 +2,10 @@
   "name": "satellizer",
   "version": "1.0.0",
   "homepage": "https://github.com/sahat/satellizer",
-  "license": "MIT"
+  "license": "MIT",
+  "main": "dist/your-awesome-js-module.js",
+  "ignore": [
+    ".gitignore",
+    ".travis.yml"
+  ]
 }
