--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ########################
-# Node.js
+## Node.js
 ########################
 
 # Logs
@@ -37,7 +37,7 @@ Gemfile.lock
 Thumbs.db
 
 ########################
-# Visual Studio
+## Visual Studio
 ########################
 
 ## Ignore Visual Studio temporary files, build results, and
@@ -224,7 +224,7 @@ FakesAssemblies/
 
 
 ########################
-# Python
+## Python
 ########################
 
 # Byte-compiled / optimized / DLL files
@@ -280,3 +280,35 @@ docs/_build/
 
 # PyBuilder
 target/
+
+
+########################
+## Ruby on Rails
+########################
+
+*.rbc
+capybara-*.html
+.rspec
+/log
+/tmp
+/db/*.sqlite3
+/public/system
+/coverage/
+/spec/tmp
+**.orig
+rerun.txt
+pickle-email-*.html
+
+# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
+config/initializers/secret_token.rb
+config/secrets.yml
+
+## Environment normalisation:
+/.bundle
+/vendor/bundle
+
+# these should all be checked in to normalise the environment:
+# Gemfile.lock, .ruby-version, .ruby-gemset
+
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
