--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,20 @@ _testmain.go
 /deps
 erl_crash.dump
 *.ez
+
+########################
+### Java
+########################
+
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
