gitignore: scala play framework scala: added paly framework trdy spi sample app

--- a/.gitignore
+++ b/.gitignore
@@ -377,3 +377,43 @@ hs_err_pid*
 .env.php
 composer.phar
 composer.lock
+
+########################
+### Scala
+########################
+
+*.class
+*.log
+
+# sbt specific
+.cache/
+.history/
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+
+# Ignore Play! working directory #
+bin/
+/db
+.eclipse
+/lib/
+/logs/
+/modules
+/project/project
+/project/target
+/target
+tmp/
+test-result
+server.pid
+*.iml
+*.eml
+/dist/
+.cache
