added heroku node.js dependencies

--- a/package.json
+++ b/package.json
@@ -33,6 +33,17 @@
     "oauth 2.0",
     "user management"
   ],
+  "dependencies": {
+    "bcryptjs": "^0.7.12",
+    "body-parser": "^1.6.2",
+    "express": "^4.8.2",
+    "jwt-simple": "^0.2.0",
+    "lodash": "^2.4.1",
+    "moment": "^2.8.1",
+    "mongoose": "^3.8.14",
+    "morgan": "^1.2.2",
+    "request": "^2.40.0"
+  },
   "devDependencies": {
     "gulp": "^3.8.7",
     "gulp-complexity": "^0.2.1",
