--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "satellizer",
-  "version": "0.1.0",
-  "main": "lib/satellizer.js",
+  "version": "0.2.0",
+  "main": "satellizer.js",
   "homepage": "https://github.com/sahat/satellizer",
   "ignore": [
     ".gitignore",
@@ -9,7 +9,7 @@
     "node_modules",
     "bower_components",
     "test",
-    "README.md",
+    "LICENSE",
     "package.json",
     "gulpfile.js",
     "karma.conf.js",
