use a separate package.json in node.js client folder and run postinstall after heroku deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.2.0",
   "scripts": {
     "start": "node ./examples/server/node/server.js",
-    "test": "karma start"
+    "test": "karma start",
+    "postinstall": "npm install examples/client"
   },
   "homepage": "https://github.com/sahat/satellizer",
   "repository": {
@@ -15,17 +16,6 @@
     "name": "Sahat Yalkabov",
     "email": "sahat@me.com",
     "url": "http://sahatyalkabov.com"
-  },
-  "dependencies": {
-    "bcryptjs": "^0.7.12",
-    "body-parser": "^1.6.2",
-    "express": "^4.8.2",
-    "jwt-simple": "^0.2.0",
-    "lodash": "^2.4.1",
-    "moment": "^2.8.1",
-    "mongoose": "^3.8.14",
-    "morgan": "^1.2.2",
-    "request": "^2.40.0"
   },
   "devDependencies": {
     "gulp": "^3.8.7",
@@ -61,5 +51,5 @@
     "oauth1",
     "sign-in",
     "social"
-  ],
+  ]
 }
