--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.2.0",
   "scripts": {
     "start": "node ./examples/server/node/server.js",
-    "test": "karma start",
-    "postinstall": "cd examples/client && npm install"
+    "test": "karma start"
   },
   "homepage": "https://github.com/sahat/satellizer",
   "repository": {
@@ -16,6 +15,17 @@
     "name": "Sahat Yalkabov",
     "email": "sahat@me.com",
     "url": "http://sahatyalkabov.com"
+  },
+  "dependencies": {
+    "bcryptjs": "^0.7.12",
+    "body-parser": "^1.6.2",
+    "express": "^4.8.2",
+    "jwt-simple": "^0.2.0",
+    "lodash": "^2.4.1",
+    "moment": "^2.8.1",
+    "mongoose": "^3.8.14",
+    "morgan": "^1.2.2",
+    "request": "^2.40.0"
   },
   "devDependencies": {
     "gulp": "^3.8.7",
