Implement angular-local-storage to improve the local storage handling

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
 before_script:
   - npm install -g bower codeclimate-test-reporter
   - npm install
-  - bower install angular angular-mocks
+  - bower install
 
 after_script:
   - cat coverage/lcov.info | codeclimate
