ruby: replaced rails with sinatra

--- a/examples/server/ruby/Gemfile
+++ b/examples/server/ruby/Gemfile
@@ -1,28 +1,7 @@
 source 'https://rubygems.org'
 
-gem 'rails', '4.1.4'
-
-gem 'rails-api'
-
-gem 'spring', :group => :development
-
-gem 'sqlite3'
-
-gem 'timezone'
-
-gem 'tzinfo-data'
-
-# To use ActiveModel has_secure_password
-# gem 'bcrypt-ruby', '~> 3.1.2'
-
-# To use Jbuilder templates for JSON
-# gem 'jbuilder'
-
-# Use unicorn as the app server
-# gem 'unicorn'
-
-# Deploy with Capistrano
-# gem 'capistrano', :group => :development
-
-# To use debugger
-# gem 'ruby-debug19', :require => 'ruby-debug'
+gem 'sinatra'
+gem 'sinatra-contrib'
+gem 'datamapper'
+gem 'dm-sqlite-adapter'
+gem 'rack'
