--- a/.gitignore
+++ b/.gitignore
@@ -373,10 +373,13 @@ hs_err_pid*
 ########################
 
 /bootstrap/compiled.php
-.env.*.php
-.env.php
+/vendor
 composer.phar
 composer.lock
+.env.*.php
+.env.php
+.DS_Store
+Thumbs.db
 
 ########################
 ### Scala
