--- a/examples/server/python/requirements.txt
+++ b/examples/server/python/requirements.txt
@@ -5,6 +5,6 @@ MarkupSafe==0.23
 SQLAlchemy==0.9.7
 Werkzeug==0.9.6
 itsdangerous==0.24
-jwt==0.3.1
+PyJWT==0.2.1
 requests==2.3.0
 requests-oauthlib==0.4.1
