scala: updated play! example

--- a/examples/server/scala/conf/application.conf
+++ b/examples/server/scala/conf/application.conf
@@ -41,6 +41,8 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
+mongodb.uri = "mongodb://localhost:27017/test"
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
