--- a/examples/server/ror/.gitignore
+++ b/examples/server/ror/.gitignore
@@ -10,6 +10,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+/public
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
