Modified gitignore for Java

--- a/.gitignore
+++ b/.gitignore
@@ -356,6 +356,11 @@ erl_crash.dump
 ########################
 
 *.class
+.classpath
+.settings
+.project
+
+target
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
