--- a/examples/server/java/pom.xml
+++ b/examples/server/java/pom.xml
@@ -56,16 +56,6 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>io.dropwizard</groupId>
-			<artifactId>dropwizard-views-freemarker</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.dropwizard</groupId>
-			<artifactId>dropwizard-views-mustache</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.178</version>
@@ -80,6 +70,16 @@
 			<groupId>com.bazaarvoice.dropwizard</groupId>
 			<artifactId>dropwizard-configurable-assets-bundle</artifactId>
 			<version>0.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.3m</version>
+		</dependency>
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-client</artifactId>
+			<version>0.7.1</version>
 		</dependency>
 	</dependencies>
 
