--- a/examples/server/java/example.yml
+++ b/examples/server/java/example.yml
@@ -18,31 +18,12 @@ database:
   url: jdbc:h2:./target/example
 
 # use the simple server factory if you only want to run on a single port
-#server:
-#  type: simple
-#  connector:
-#    type: http
-#    port: 8080
-
 server:
-#  softNofileLimit: 1000
-#  hardNofileLimit: 1000
-  applicationConnectors:
-    - type: http
-      port: 3000
-    - type: https
-      port: 8443
-      keyStorePath: example.keystore
-      keyStorePassword: example
-      validateCerts: false
-  adminConnectors:
-    - type: http
-      port: 8081
-    - type: https
-      port: 8444
-      keyStorePath: example.keystore
-      keyStorePassword: example
-      validateCerts: false
+  type: simple
+  connector:
+    type: http
+    port: 8080
+  applicationContextPath: /
 
 # Logging settings.
 logging:
@@ -60,9 +41,3 @@ logging:
 
   appenders:
     - type: console
-
-# assets bundle
-assets:
-  overrides:
-    /assets: "../../client/" 
-    #/assets: src/main/resources/assets
