Added jwt, joda-time and commons-lang3 dependencies

--- a/examples/server/java/pom.xml
+++ b/examples/server/java/pom.xml
@@ -76,6 +76,21 @@
 			<artifactId>dropwizard-client</artifactId>
 			<version>0.7.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
