--- a/examples/server/java/example.yml
+++ b/examples/server/java/example.yml
@@ -4,7 +4,6 @@ defaultName: Stranger
 
 # Database settings.
 database:
-
   # the name of your JDBC driver
   driverClass: org.h2.Driver
 
@@ -17,7 +16,6 @@ database:
   # the JDBC URL
   url: jdbc:h2:./target/example
 
-# use the simple server factory if you only want to run on a single port
 server:
   type: simple
   connector:
@@ -27,17 +25,22 @@ server:
 
 # Logging settings.
 logging:
-
   # The default level of all loggers. Can be OFF, ERROR, WARN, INFO, DEBUG, TRACE, or ALL.
   level: INFO
 
   # Logger-specific levels.
   loggers:
-
-    # Sets the level for 'com.example.app' to DEBUG.
     com.example.app: DEBUG
-
     org.hibernate.SQL: ALL
 
   appenders:
     - type: console
+
+clientSecrets:
+    facebook: Facebook Client Secret
+    google: Google Client Secret
+    linkedin: Linkedin Client Secret
+    github: Github Client Secret
+    foursquare: Foursquare Secret
+    twitter: Twitter Consumer Key
+    
