--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,10 @@
     "examples",
     "coverage"
   ],
+  "dependencies": {
+    "angular": "~1.3.0"
+  },
   "devDependencies": {
-    "angular": "~1.3.0",
     "angular-mocks": "~1.3.0"
   }
 }
