--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "satellizer",
   "version": "0.8.4",
-  "main": "satellizer.js",
+  "main": "dist/satellizer.js",
   "homepage": "https://github.com/sahat/satellizer",
   "ignore": [
     ".gitignore",
