--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "http://sahatyalkabov.com"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "bcryptjs": "^2.0.2",
     "body-parser": "^1.8.1",
     "express": "^4.9.0",
@@ -63,6 +64,6 @@
     "oauth2",
     "oauth1",
     "sign-in",
-    "social",
+    "social"
   ]
 }
