--- a/bower.json
+++ b/bower.json
@@ -14,12 +14,10 @@
     "gulpfile.js",
     "karma.conf.js",
     "examples",
-    "coverage"
+    "coverage",
+    "src"
   ],
   "dependencies": {
-    "angular": "~1.3.0"
-  },
-  "devDependencies": {
-    "angular-mocks": "~1.3.0"
+    "angular": "~1.3.4"
   }
 }
