--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,22 @@
 {
   "name": "satellizer",
   "version": "0.8.6",
-  "main": "dist/satellizer.js",
+  "main": "satellizer.js",
   "homepage": "https://github.com/sahat/satellizer",
   "ignore": [
     ".gitignore",
+    ".jshintrc",
     ".travis.yml",
-    "node_modules",
     "bower_components",
-    "test",
-    "LICENSE",
+    "node_modules",
+    "karma.conf.js",
     "package.json",
     "gulpfile.js",
-    "karma.conf.js",
     "examples",
     "coverage",
-    "src"
+    "test"
   ],
   "dependencies": {
-    "angular": "~1.3.4"
+    "angular": "latest"
   }
 }
