--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   },
   "devDependencies": {
     "gulp": "^3.8.7",
-    "gulp-complexity": "^0.2.1",
+    "gulp-complexity": "~0.3.0",
     "gulp-plumber": "^0.6.4",
     "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^0.3.1",
+    "gulp-uglify": "~1.0.0",
+    "gulp-header": "~1.2.0",
     "karma": "^0.12.21",
     "karma-coverage": "^0.2.6",
     "karma-jasmine": "^0.1.5",
