--- a/examples/ionic/bower.json
+++ b/examples/ionic/bower.json
@@ -2,6 +2,7 @@
   "name": "Sidemenu",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.13"
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.13",
+    "satellizer": "^0.8.7"
   }
 }
