Updated .htaccess to include authorization header

--- a/examples/server/php/public/.htaccess
+++ b/examples/server/php/public/.htaccess
@@ -1,3 +1,4 @@
+# Laravel Rewrites
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews
@@ -5,11 +6,15 @@
 
     RewriteEngine On
 
-    # Redirect Trailing Slashes...
+    # Redirect trailing slashes
     RewriteRule ^(.*)/$ /$1 [L,R=301]
 
-    # Handle Front Controller...
+    # Handle front controller
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Include Authorization header in a request
+    RewriteCond %{HTTP:Authorization} ^(.+)$
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 </IfModule>
