--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "satellizer",
+  "name": "satellizer-bdeboer",
   "version": "0.9.2",
   "main": "satellizer.js",
   "homepage": "https://github.com/sahat/satellizer",
