--- a/examples/server/node/package.json
+++ b/examples/server/node/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "satellizer",
+  "name": "satellizer-server-example",
   "main": "server.js",
   "dependencies": {
     "async": "^0.9.0",
     "bcryptjs": "^2.1.0",
-    "body-parser": "^1.10.1",
-    "express": "^4.11.0",
+    "body-parser": "^1.12.0",
+    "express": "^4.12.2",
     "jwt-simple": "^0.2.0",
-    "lodash": "^2.4.1",
+    "lodash": "^3.4.0",
     "moment": "^2.9.0",
-    "mongoose": "^3.8.21",
+    "mongoose": "^3.8.24",
     "morgan": "^1.5.1",
-    "request": "^2.51.0"
+    "request": "^2.53.0"
   }
 }
