--- a/examples/server/ruby-on-rails/Gemfile
+++ b/examples/server/ruby-on-rails/Gemfile
@@ -11,12 +11,14 @@ gem 'httpclient'
 gem 'responders', '~> 2.0'
 gem 'active_model_serializers', '~> 0.8.2'
 gem 'bcrypt', '~> 3.1.7'
+gem 'sinatra'
 
 gem 'thin', group: :development
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'jazz_hands'
 
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
