--- a/examples/server/laravel5/composer.json
+++ b/examples/server/laravel5/composer.json
@@ -5,7 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+	  	"firebase/php-jwt": "~2.0",
+	  	"guzzlehttp/guzzle": "5.2.0",
+	  	"guzzlehttp/oauth-subscriber": "0.2.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
