--- a/examples/server/node/package.json
+++ b/examples/server/node/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "satellizer-server-example",
+  "name": "satellizer-server",
+  "version": "0.0.0",
   "main": "server.js",
   "dependencies": {
     "async": "^0.9.0",
     "bcryptjs": "^2.1.0",
-    "body-parser": "^1.12.2",
+    "body-parser": "^1.12.3",
     "express": "^4.12.3",
     "jwt-simple": "^0.3.0",
     "moment": "^2.10.2",
-    "mongoose": "^4.0.1",
+    "mongoose": "^4.0.2",
     "morgan": "^1.5.2",
     "request": "^2.55.0"
   }
