--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.10.1",
   "scripts": {
     "start": "node ./examples/server/node/server.js",
+    "postinstall": "gulp copy && gulp php",
     "test": "karma start"
   },
   "main": "satellizer.min.js",
