--- a/examples/ionic/package.json
+++ b/examples/ionic/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "sidemenu",
+  "name": "satellizer-ionic",
   "version": "1.0.0",
-  "description": "Sidemenu: An Ionic project",
   "dependencies": {
-    "gulp": "^3.5.6",
-    "gulp-sass": "^0.7.1",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.0.1",
+    "gulp-concat": "^2.5.2",
+    "gulp-minify-css": "^1.1.6",
+    "gulp-rename": "^1.2.2"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "bower": "^1.4.1",
+    "gulp-util": "^3.0.5",
+    "shelljs": "^0.5.1"
   }
 }
