--- a/examples/ionic/package.json
+++ b/examples/ionic/package.json
@@ -13,7 +13,9 @@
     "gulp-util": "^3.0.5",
     "shelljs": "^0.5.1"
   },
-  "cordovaPlugins": [],
+  "cordovaPlugins": [
+    "cordova-plugin-inappbrowser"
+  ],
   "cordovaPlatforms": [
     "ios"
   ]
