--- a/examples/server/node/package.json
+++ b/examples/server/node/package.json
@@ -6,12 +6,13 @@
     "async": "^0.9.2",
     "bcryptjs": "^2.1.0",
     "body-parser": "^1.12.4",
+    "colors": "^1.1.0",
+    "cors": "^2.7.1",
     "express": "^4.12.4",
     "jwt-simple": "^0.3.0",
     "moment": "^2.10.3",
     "mongoose": "^4.0.3",
     "morgan": "^1.5.3",
-    "request": "^2.55.0",
-    "colors": "^1.1.0"
+    "request": "^2.55.0"
   }
 }
