--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "test"
   ],
   "dependencies": {
-    "angular": "^1.3.x"
+    "angular": "^1.3.x",
+    "angular-local-storage": "~0.2.2"
   }
 }
