--- a/examples/server/ruby/Gemfile
+++ b/examples/server/ruby/Gemfile
@@ -7,6 +7,7 @@ gem 'rails', '4.2.0'
 gem 'sqlite3'
 
 gem 'jwt'
+gem 'twitter_oauth'
 gem 'httpclient'
 gem 'responders', '~> 2.0'
 gem 'active_model_serializers', '~> 0.8.2'
