--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./examples/server/node/server.js",
     "test": "karma start"
   },
-  "main": "satellizer.min.js",
+  "main": "satellizer.js",
   "homepage": "https://github.com/sahat/satellizer",
   "bugs": "https://github.com/sahat/satellizer/issues",
   "repository": {
