updated travis-ci codeclimate settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ script:
   - ./node_modules/karma/bin/karma start karma.conf.js --no-auto-watch --single-run --browsers PhantomJS
 
 before_script:
-  - npm install -g bower codeclimate-test-reporter
+  - npm install -g bower
   - npm install
 
 after_script:
-  - cat coverage/lcov.info | codeclimate
+  - codeclimate-test-reporter < lcov.info
 
 addons:
   code_climate:
