--- a/examples/server/php/composer.json
+++ b/examples/server/php/composer.json
@@ -8,7 +8,7 @@
 		"laravel/framework": "5.2.*",
 	  	"firebase/php-jwt": "~3.0.0",
 	  	"guzzlehttp/guzzle": "~6.1.1",
-	  	"guzzlehttp/oauth-subscriber": "~0.3.0"
+	  	"guzzlehttp/oauth-subscriber": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
