--- a/examples/ionic/package.json
+++ b/examples/ionic/package.json
@@ -1,22 +1,23 @@
 {
   "name": "satellizer-ionic",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "dependencies": {
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.1",
-    "gulp-concat": "^2.5.2",
-    "gulp-minify-css": "^1.1.6",
+    "gulp-sass": "^2.1.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.3",
     "gulp-rename": "^1.2.2"
   },
   "devDependencies": {
-    "bower": "^1.4.1",
-    "gulp-util": "^3.0.5",
-    "shelljs": "^0.5.1"
+    "bower": "^1.7.7",
+    "gulp-util": "^3.0.7",
+    "shelljs": "^0.5.3"
   },
   "cordovaPlugins": [
     "cordova-plugin-inappbrowser"
   ],
   "cordovaPlatforms": [
-    "ios"
+    "ios",
+    "android"
   ]
 }
