--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-complexity": "~0.3.2",
+    "gulp-header": "~1.7.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "~1.5.2",
-    "gulp-header": "~1.7.1",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
-    "karma-coverage": "^0.5.3",
-    "karma-jasmine": "^0.3.7",
-    "karma-phantomjs-launcher": "^1.0.0"
+    "karma-coverage": "^0.5.5",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.5"
   },
   "license": "MIT",
   "tags": [
