--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "babelify": "^7.2.0",
     "babelify-external-helpers": "^1.1.0",
     "browserify": "^13.0.0",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-react": "^5.0.1",
     "gulp": "^3.9.1",
     "gulp-complexity": "~0.3.2",
     "gulp-header": "~1.7.1",
