--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "parser": "babel-eslint",
   "rules": {
     "no-spaced-func:": 0,
+    "no-param-reassign": 0,
     "max-len": 0,
     "comma-dangle": 0,
     "quote-props": 0,
