--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
   ],
   "dependencies": {
     "angular": "^1.5.7",
-    "angular-route": "^1.5.7"
+    "angular-route": "^1.5.7",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0"
   }
 }
