--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "noImplicitAny": false,
     "noResolve": true,
     "removeComments": false,
-    "target": "es2015",
-    "outDir": "dist"
+    "target": "es5",
+    "moduleResolution": "node",
+    "outDir": "lib"
   },
   "exclude": ["node_modules"]
 }
