checked in satellizer code in client and php examples

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+build
 
 # Dependency directory
 node_modules
