updated ionic bower.json and package.json versions

--- a/examples/ionic/package.json
+++ b/examples/ionic/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "satellizer-ionic",
+  "name": "satellizer-ionic-example",
   "version": "1.0.0",
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.2.0",
+    "gulp-sass": "^2.3.2",
     "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.3",
+    "gulp-minify-css": "^1.2.4",
     "gulp-rename": "^1.2.2"
   },
   "devDependencies": {
-    "bower": "^1.7.7",
+    "bower": "^1.7.9",
     "gulp-util": "^3.0.7",
-    "shelljs": "^0.6.0"
+    "shelljs": "^0.7.3"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
