--- a/examples/ionic/bower.json
+++ b/examples/ionic/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "satellizer-ionic",
+  "name": "satellizer-ionic-example",
   "devDependencies": {
-    "ionic": "^1.2.4",
-    "satellizer": "^0.14.0"
+    "ionic": "^1.3.1",
+    "satellizer": "latest"
   }
 }
