updated typings, exclude examples from ts compiler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,8 @@
     "moduleResolution": "node",
     "outDir": "build"
   },
-  "exclude": ["node_modules"]
+  "exclude": [
+    "examples",
+    "node_modules"
+  ]
 }
